<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_localizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_localizar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/excluir_confirmacao" />

    <TextView
        android:id="@+id/localizar_tarefa"
        android:text="@string/localizar_tarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/id_tarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numeric="integer"
        android:textSize="20sp"
        android:layout_below="@id/localizar_tarefa" />

    <TextView
        android:id="@+id/localizar_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Titulo"
        android:textSize="20sp"
        android:layout_below="@+id/id_tarefa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/localizar_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/localizar_titulo"
        android:text="Descricao"
        android:textSize="10sp"/>


    <Button
        android:id="@+id/bt_ok"
        android:text="@string/ok"
        android:layout_width="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/localizar_descricao"
        android:layout_height="wrap_content"
        android:onClick="btOkOnClick"/>

    <Button
        android:id="@+id/bt_sair"
        android:text="@string/sair"
        android:layout_width="100dp"
        android:layout_marginRight="50dp"
        android:layout_alignTop="@id/bt_ok"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:onClick="btSairOnClick"/>


</RelativeLayout>
